--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -4,6 +4,7 @@
     max-width: 1250px;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
 
     &-banner {
         margin-right: -2.5rem;
